stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_invalid_char_escape.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/invalid_char_escape.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/invalid_char_escape.ml:2:7]
 1 │ fn main() {
 2 │   dbg('\q')
   ·       ──┬─
   ·         ╰── unsupported character escape: \q
 3 │ }
   ╰────
